// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemGroup Item should read the value of the size prop from context when the prop is not defined 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -6,22 +6,22 @@
  >
    <div
      role="listitem"
    >
      <div
-       class="components-item css-re261t-View-medium-item-spacedAround em57xhy0"
+       class="components-item css-1hpmscp-View-large-item-spacedAround em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Item"
      >
        Code
      </div>
    </div>
    <div
      role="listitem"
    >
      <div
-       class="components-item css-re261t-View-medium-item-spacedAround em57xhy0"
+       class="components-item css-1hpmscp-View-large-item-spacedAround em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Item"
      >
        Is
      </div>
`;

exports[`ItemGroup Item should render a button with the isAction prop is true 1`] = `
Snapshot Diff:
- First value
+ Second value

  <div
    role="listitem"
  >
-   <div
-     class="components-item css-1x4a3cb-View-medium-item em57xhy0"
+   <button
+     class="components-item css-wgc9wf-View-unstyledButton-medium-item em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Item"
    >
      Code is poetry
-   </div>
+   </button>
  </div>
`;

exports[`ItemGroup Item should use different amounts of padding depending on the value of the size prop 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,10 +1,10 @@
  <div
    role="listitem"
  >
    <div
-     class="components-item css-1x4a3cb-View-medium-item em57xhy0"
+     class="components-item css-1f4zt9-View-large-item em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Item"
    >
      Code is poetry
    </div>
`;

exports[`ItemGroup ItemGroup component should render correctly 1`] = `
.emotion-0 {
  border-radius: 2px;
}

.emotion-0>*:first-of-type {
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.emotion-0>*:last-of-type {
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-2 {
  padding: calc((36px - calc(13px * 1.2) - 2px) / 2) 12px;
  width: 100%;
  display: block;
  border-radius: 2px;
}

<div
  class="components-item-group emotion-0 emotion-1"
  data-wp-c16t="true"
  data-wp-component="ItemGroup"
  role="list"
>
  <div
    role="listitem"
  >
    <div
      class="components-item emotion-2 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Item"
    >
      Code is poetry
    </div>
  </div>
</div>
`;

exports[`ItemGroup ItemGroup component should render items individually when the isSeparated prop is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,16 +1,16 @@
  <div
-   class="components-item-group css-1r84h6l-View-rounded em57xhy0"
+   class="components-item-group css-1d5fx4g-View-separated-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="ItemGroup"
    role="list"
  >
    <div
      role="listitem"
    >
      <div
-       class="components-item css-re261t-View-medium-item-spacedAround em57xhy0"
+       class="components-item css-1x4a3cb-View-medium-item em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Item"
      >
        Code is poetry
      </div>
`;

exports[`ItemGroup ItemGroup component should show borders when the isBordered prop is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,16 +1,16 @@
  <div
-   class="components-item-group css-1r84h6l-View-rounded em57xhy0"
+   class="components-item-group css-qixh5a-View-bordered-separated-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="ItemGroup"
    role="list"
  >
    <div
      role="listitem"
    >
      <div
-       class="components-item css-re261t-View-medium-item-spacedAround em57xhy0"
+       class="components-item css-1x4a3cb-View-medium-item em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Item"
      >
        Code is poetry
      </div>
`;

exports[`ItemGroup ItemGroup component should show rounded corners when the isRounded prop is true 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,7 +1,7 @@
  <div
-   class="components-item-group css-1r84h6l-View-rounded em57xhy0"
+   class="components-item-group css-1mm2cvy-View em57xhy0"
    data-wp-c16t="true"
    data-wp-component="ItemGroup"
    role="list"
  >
    <div
`;
